Editing home index and controller to show preferred snacks.

--- a/LanchesC/Views/Cart/Index.cshtml
+++ b/LanchesC/Views/Cart/Index.cshtml
@@ -33,7 +33,7 @@
 
                         <td class="text-center">
                             <a asp-controller="Cart" asp-action="RemoveFromCart"
-                               asp-route-lancheId="@item.Snack.SnackId">
+                               asp-route-SnackId="@item.Snack.SnackId">
                                 <img src="~/images/delete.png" width="20px" height="20px" />
                             </a>
                         </td>
