--- a/LanchesC/Views/Shared/_SnackDisplay.cshtml
+++ b/LanchesC/Views/Shared/_SnackDisplay.cshtml
@@ -13,7 +13,7 @@
     <div>
         <p class="button">
             <a class="btn btn-primary" id="cartButton" asp-controller="Cart"
-               asp-action="AddItemToCart" asp-route-LancheId="@Model.SnackId">
+               asp-action="AddItemToCart" asp-route-SnackId="@Model.SnackId">
                 Add to cart
             </a>
         </p>
