Removing unnecessary 'using' and adding detail snack page

--- a/LanchesC/Views/Shared/_SnackDisplay.cshtml
+++ b/LanchesC/Views/Shared/_SnackDisplay.cshtml
@@ -6,7 +6,7 @@
 
     <h4>
         <a asp-controller="Snack" asp-action="Details"
-           asp-route-lancheId="@Model.SnackId">@Model.Name</a>
+           asp-route-SnackId="@Model.SnackId">@Model.Name</a>
     </h4>
 
     <p>@Model.ShortDescription</p>
