--- a/LanchesC/Views/Cart/Index.cshtml
+++ b/LanchesC/Views/Cart/Index.cshtml
@@ -54,7 +54,7 @@
 
         <div class="text-right">
             <div class="btn-group">
-                <a class="btn btn-success" asp-controller="Pedido" asp-action="Checkout">Finish order</a>
+                <a class="btn btn-success" asp-controller="Order" asp-action="Checkout">Finish order</a>
                 &nbsp;&nbsp;&nbsp;
                 <a class="btn btn-primary" asp-controller="Snack" asp-action="List">Back to snack list</a>
             </div>
