--- a/LanchesC/Views/Order/CheckoutResume.cshtml
+++ b/LanchesC/Views/Order/CheckoutResume.cshtml
@@ -1,5 +1,41 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model Order
+
+<div class="container">
+
+    <div class="jumbotron">
+        <h2>@ViewBag.CheckoutCompleteMessage</h2>
+    </div>
+
+    <div class="card">
+        <div class="card-body">
+            <p>Client : <strong>@Model.Name</strong>
+            <p>Date of Order :  <strong>@Model.DateOrder</strong>
+            <p>Order number  : <strong>@Model.OrderId</strong></p>
+
+            <table class="table">
+                <tr>
+                    <th></th>
+                    <th>Quantity</th>
+                    <th>Snack</th>
+                    <th>Price</th>
+                </tr>
+                @foreach (var item in Model.OrderDetails)
+                {
+                    <tr>
+                        <td><img src="@item.Snack.ImageUrl" width="40" height="40" /></td>
+                        <td>@item.Quantity</td>
+                        <td>@item.Snack.Name</td>
+                        <td>@item.Snack.Price</td>
+                    </tr>
+                }
+            </table>
+
+            <h4>Total value: <strong>@(((decimal)ViewBag.TotalOrder).ToString("C2"))</strong></h4>
+        </div>
+    </div>
+</div>
+<div class="form-group" style="text-align :center">
+    <h3>
+        <a class="nav-link text-info" asp-controller="Home" asp-action="Index">Return to home</a>
+    </h3>
+</div>
