--- a/LanchesC/Views/Shared/_Layout.cshtml
+++ b/LanchesC/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <input type="text" class="form-control" placeholder="Search for a product" name="searchString" value="@ViewData["searchString"]">
                         </div>
                     </form>
-
+                    @await Html.PartialAsync("_LoginPartial")
                 </div>
             </div>
         </nav>
